Bug 187611: Set the proper Content-Type of XSLT generated documents

r=peterv sr=jst